QueryService 생성